change on responsive architecture

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             aria-labelledby="exampleModalLabel"
             aria-hidden="true"
           >
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-fullscreen">
               <div class="modal-content">
                 <div class="modal-header">
                   <a href="./index.html">
@@ -161,6 +161,8 @@
       </header>
 
       <main class="banner">
+        <div class="bg"></div>
+        <div class="bgDots"></div>
         <p class="banner__Text">
           Комплексное сопровождение процесса покупки недвижимости за границей
           для Ваших клиентов
